--- a/safii-web/src/components/Features.css
+++ b/safii-web/src/components/Features.css
@@ -107,6 +107,7 @@
   color: var(--text-light);
   line-height: 1.7;
   margin-bottom: var(--spacing-md);
+  text-align: left;
 }
 
 .feature-list {
